# ctools

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Forge.toml  Makefile  README.md
examples/: demo.c  list.c  map.c  queue.c  stack.c  vec.c
include/ctools/: comparators.h  list.h  map.h  queue.h  stack.h  vec.h
include/cvec/: cvec.h  iterator.h
src/: comparators.c  cvec.c  iterator.c  list.c  map.c  memory.h  vec.c  zopenmap.c
test/: test_lib.c  test_list.c  test_main.c  test_map.c  test_stack.c  test_vec.c
